syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "./todo/v1;todo";


service TodoService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc AddMany(stream AddRequest) returns (stream AddResponse);
    rpc Get(GetRequest) returns (Todo);
    rpc GetAll(Empty) returns (stream Todo);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc UpdateMany(stream UpdateRequest) returns (UpdateManyResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc DeleteAll(Empty) returns (DeleteAllResponse);
}

message Todo {
    string id = 1;
    string content = 2;
    Priority priority = 3;
    bool is_done = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

enum Priority {
    PRIORITY_UNSPECIFIED = 0;
    PRIORITY_LOW = 1;
    PRIORITY_MEDIUM = 2;
    PRIORITY_HIGH = 3;
}

message AddRequest {
    string content = 1;
    Priority priority = 2;
}

message AddResponse {
    string id = 1;
}

message GetRequest {
    string id = 1;
}

message UpdateRequest {
    string id = 1;
    string content = 2;
    Priority priority = 3;
    bool is_done = 4;
}

message UpdateResponse {
    int64 affected = 1;
    string id = 2;
}

message UpdateManyResponse {
    int64 affected = 1;
    repeated string ids = 2;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    int64 affected = 1;
    string id = 2;
}

message DeleteAllResponse {
    int64 affected = 1;
    repeated string ids = 2;
}

message Empty {}